a bit more HTML5-y

--- a/gradient-editor/gradient-editor.html
+++ b/gradient-editor/gradient-editor.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+
 <!--
  * Copyright 2011, Google Inc.
  * All rights reserved.
@@ -28,25 +30,24 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <title>JQuery Gradient Editor</title>
 <style>
 html, body {
   font-family: sans-serif;
 }
 </style>
-<link type="text/css" href="../jquery-ui-1.8.2.custom/css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
-<link type="text/css" href="../colorpicker/css/colorpicker.css" rel="stylesheet" />
-<link type="text/css" href="gradient-editor.css" rel="stylesheet" />
-<script type="text/javascript" src="../jquery-ui-1.8.2.custom/js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="../jquery-ui-1.8.2.custom/js/jquery-ui-1.8.2.custom.min.js"></script>
-<script type="text/javascript" src="../colorpicker/js/colorpicker.js"></script>
-<script type="text/javascript" src="gradient-editor.js"></script>
-<script type="text/javascript">
+<link href="../jquery-ui-1.8.2.custom/css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
+<link href="../colorpicker/css/colorpicker.css" rel="stylesheet" />
+<link href="gradient-editor.css" rel="stylesheet" />
+<script src="../jquery-ui-1.8.2.custom/js/jquery-1.4.2.min.js"></script>
+<script src="../jquery-ui-1.8.2.custom/js/jquery-ui-1.8.2.custom.min.js"></script>
+<script src="../colorpicker/js/colorpicker.js"></script>
+<script src="gradient-editor.js"></script>
+<script>
 $(function(){
   $("#gradientEditor").gradientEditor();
 });
